--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style-css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="containerImg">
+            <div class="img show"><img src="img/01.webp" alt=""></div>
+            <div class="img"><img src="img/02.webp" alt=""></div>
+            <div class="img"><img src="img/03.webp" alt=""></div>
+            <div class="img"><img src="img/04.webp" alt=""></div>
+            <div class="img"><img src="img/05.webp" alt=""></div>
 
+            <button class="incremento"><i class="fa-solid fa-chevron-up"></i></button>
+            <button class="decremento"><i class="fa-solid fa-chevron-down"></i></button>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
