--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 <body>
     <div class="container">
         <div class="containerImg">
-            <div class="img show"><img src="img/01.webp" alt=""></div>
-            <div class="img"><img src="img/02.webp" alt=""></div>
-            <div class="img"><img src="img/03.webp" alt=""></div>
-            <div class="img"><img src="img/04.webp" alt=""></div>
-            <div class="img"><img src="img/05.webp" alt=""></div>
+            
+          
 
-            <button id="giacomo" class="incremento"><i class="fa-solid fa-chevron-up"></i></button>
+            <button id="btnSu" class="incremento"><i class="fa-solid fa-chevron-up"></i></button>
             <button id="btnGiu" class="decremento"><i class="fa-solid fa-chevron-down"></i></button>
         </div>
     </div>
